# cabanas-plataforma

./: README.md
landing-page/: next.config.ts  package-lock.json  package.json
landing-page/public/: robots.txt
landing-page/src/app/: layout.tsx  page.tsx
landing-page/src/components/: BookingModal.tsx  CabinDetailsModal.tsx  CallToAction.tsx  Features.tsx  Footer.tsx  Hero.tsx  SchemaOrg.tsx  Testimonials.tsx
sistema-reservas/: README.md  plano_implementacao_reservas.md
sistema-reservas/backend/: .env.example  init_db.py  pyproject.toml  sql_app.db  test.db
sistema-reservas/backend/alembic/: env.py
sistema-reservas/backend/alembic/versions/: 234b5b35611b_initial_migration.py
sistema-reservas/backend/app/: database.py  init_db.py  main.py
sistema-reservas/backend/app/models/: models.py
sistema-reservas/backend/app/routers/: auth.py  cabanas.py  calendar.py  clientes.py  mensagens.py  public.py  reservas.py  usuarios.py
sistema-reservas/backend/app/schemas/: schemas.py
sistema-reservas/backend/app/services/: airbnb_csv_service.py  calendar_service.py
sistema-reservas/backend/app/templates/: voucher.html
sistema-reservas/backend/app/utils/: auth.py  email.py  logging.py
sistema-reservas/backend/tests/: test_reservas.py
sistema-reservas/docs/: MANUAL.md  TECNICO.md
sistema-reservas/frontend/: package-lock.json  package.json
sistema-reservas/frontend/public/: manifest.json
sistema-reservas/frontend/src/app/: globals.css  layout.tsx  page.tsx
sistema-reservas/frontend/src/components/: ClienteForm.tsx  Header.tsx  LayoutClient.tsx  (+6 more)
(+19 files in other folders)
